--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
   /* opacity: 0; */
   position: absolute;
   /* visibility: hidden; */
+  right: 0;
   z-index: 50;
   --tw-translate-x: 0;
   --tw-translate-y: 0;
@@ -48,10 +49,8 @@ code {
   min-height: 100vh;
 }
 
-
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  
 }
